style.css
body{
  font-family: Helvetica;
  font-size: 22px;
  color: Seashell;
  background-color: black;
  opacity: 0.9;
  text-align: center;
  margin: 0;
}

header{
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  height: 69px;
  border-bottom: 1px solid Seashell;
  padding: 4.5px 10px;
  background-color: black;
  opacity: 1;
  z-index: 10;
  margin: 0;
  width: 100%;
  box-sizing: border-box;
}

footer{
  text-align: left;
}

nav{
  display: flex;
  align-items: center;
}

nav span{
  font-family: Helvetica;
  font-size: 22px;
  color: Seashell;
  text-decoration: underline;
  padding: 20px;
}

a:visited{
  color: Seashell;
}

.logo{
  display: flex;
  align-items: center;
  height: 50px;
}

.content{
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 69px;
}

/* MISSION */

.mission_body{
  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
  width: 1200px;
  height: 700px;
  display: flex;
  justify-content: center;
}

.mission_text{
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.mission_text1, .mission_text2{
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: black;
  width: 1200px;
}

.mission_text1{
  margin-bottom: 0;
  padding: 10px 0px 25px 0px;
}

.mission_text2{
  margin-top: 0;
  padding-bottom: 10px;
}

/* TEA OF THE MONTH */

.menu{
  display: flex;
  flex-direction: column;
  width: 1000px;
}

.topline{
  display: flex;
  justify-content: space-between;
}

.bottomline{
  display: flex;
  width: 1000px;
  justify-content: center;
}

.bottomline_item_width{
  display: flex;
  width: 650px;
  justify-content: space-between;

}

.item{
  display: flex;
  flex-direction: column;
}

.menu img{
  width: 300px;
  height: 200px;
}

.item h4{
  padding: 20px 0px;
  margin: 0;
}

/* LOCATIONS */

.locations{
  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
  width: 1200px;
  height: 580px;
}

#top_locations{
  margin-bottom: 0px;
}
.block_width{
  display: flex;
  justify-content: center;
}

.block{
  background-color: black;
  width: 300px;
  opacity: 1;
  display: flex;
  flex-direction: column;
  margin: 20px;
}


/* CONTACT */

.contact{
  height: 200px;
}

